fix width on mobile

--- a/web/styles/default.css
+++ b/web/styles/default.css
@@ -85,6 +85,7 @@ h5 {
     #lines.has-side-bar {
         margin-left: 0;
         margin-top: 10px;
+        max-width: 100%;
     }
 
     .line {
